# my-finance-tracker

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  finance.py  justfile  main.py  pyproject.toml  schema.sql  test_finance.py
.zed/: settings.json
backend/: config.py  db.py  finance.py  main.py  models.py  schema.sql  schemas.py  service.py  test_finance.py
backend/tests/: conftest.py  test_db.py
frontend/: README.md  deno.json  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/components/: copybutton.tsx  toggle-theme-button.tsx
frontend/components/header/: header.tsx
frontend/components/sekletons/: skeleton-table.tsx
frontend/components/theme-provider/: theme-provider-util.ts  theme-provider.tsx  toggle-theme-button.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  skeleton.tsx  table.tsx  textarea.tsx
frontend/lib/: utils.ts
frontend/src/: App.tsx  create-entity-form.tsx  data-table.tsx  entities-create.tsx  entities-table.tsx  entities.tsx  index.css  main.tsx  routeTree.gen.ts  service.ts  transactions.tsx
frontend/src/about-components/: about-component.tsx
frontend/src/components/: AddTransactionRow.tsx  Footer.tsx  Header.tsx  Main.tsx  RecentTransactions.tsx  RecentTransactionsRows.tsx
frontend/src/create-entity-forms/: create-bond.tsx  create-credit-card.tsx  create-demat-account.tsx  create-entity-forms.tsx  create-external-contract.tsx  create-fixed-deposit.tsx  (+3 more)
(+19 files in other folders)
