[project]
name = "my-finance-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
[tool.pytest.ini_options]
addopts = "--cov=finance --cov-report=html"
testpaths = ["."]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
